# haskell-program-structure

./: README  haskell-program-structure.cabal
src/: Engine.hs  Game.hs  Main.hs  Settings.hs  Types.hs
src/Engine/: Things.hs
